--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">我的简历</string>
     <string name="dummy_button">Enter</string>
-    <string name="dummy_content">蒋辉军\n简历</string>
+    <string name="dummy_content">KernelJun\n简历</string><!-- 蒋辉军 -->
     <string name="my_choice">简历</string>
     <string name="work_experience">工作经验</string>
     <string name="educate_background">学习经历</string>
